# WS17-NumSim-Final

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
src/: main.cpp  types.hpp
src/core/: geometry.cpp  geometry.hpp  parameters.cpp  parameters.hpp
src/core/kernel/: boundaries.cl  copy.cl  debug.cl  momentum.cl  reduce.cl  resources.hpp  rhs.cl  solver.cl  velocities.cl  view_boundaries.cl  visualize.cl  zero.cl
src/core/kernel/sources/: boundaries.cl  momentum.cl  reduce.cl  resources.hpp  rhs.cl  velocities.cl  visualize.cl  zero.cl
src/json/: json.hpp
src/opencl/: opencl.hpp  opengl_interop.hpp
src/opengl/: errors.hpp  init.hpp  opengl.hpp  sampler.hpp  shader.hpp  texture.hpp  vertex_array.hpp
src/sdl/: errors.hpp  init.hpp  sdl.hpp
src/sdl/opengl/: utils.hpp  window.hpp
src/utils/: cached.hpp  pad.hpp  perf.hpp  resource.hpp  trim.hpp
src/vis/: visualizer.hpp
src/vis/shader/: cubehelix.glsl  debug.fs  fullscreen.vs  map.fs  resources.hpp
tools/: embed_resource.cpp
validation/: executor.py  gpu_executor.py  plots.py
validation/data/GTX760/: lid-driven-cavity_100x100.json  lid-driven-cavity_128x128.json  lid-driven-cavity_200x200.json  lid-driven-cavity_256x256.json  lid-driven-cavity_300x300.json  lid-driven-cavity_32x32.json  lid-driven-cavity_64x64.json
validation/data/TR1920X/: lid-driven-cavity_100x100.json  lid-driven-cavity_128x128.json  lid-driven-cavity_200x200.json  lid-driven-cavity_256x256.json  lid-driven-cavity_300x300.json  lid-driven-cavity_32x32.json  lid-driven-cavity_64x64.json
validation/impl/: utils.py
